--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,25 @@ server:
   servlet:
     context-path: /weather-service
 
-logging:
-  level:
-    com.zaxxer.hikari: trace
-
+spring:
+  datasource:
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        validator:
+          apply_to_ddl: false
+        format_sql: true
 weather:
+  simulation:
+    days: 3650
   planet:
     Ferengi:
       angular-speed: 1
